--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <p>
             Passionate persone holding diploma in Information Technology with
             expertise in computer support and a background in web and
-            application development. One year of professional experience as an
+            application development.professional experience as an
             IT officer, coupled with extensive self-learning in computer support
             and maintenance. A results-oriented problem solver with strong
             troubleshooting skills and up-to-date knowledge of programming
