--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="col-md-6 col-xs-12">
           <h1>Who I am ?</h1>
           <p>
-            Passionate persone holding diploma in Information Technology with
+            Passionate persone holding Associate degree in Information Technology with
             expertise in computer support and a background in web and
             application development.professional experience as an
             IT officer, coupled with extensive self-learning in computer support
